--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
 
    <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
 
+    <link rel="stylesheet" type="text/css" href="bootstrap/bootstrap.css" >
     <link rel="stylesheet" type="text/css" href="css/body.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
     <title>Seliq - Home Page</title>
 
-    <link href="bootstrap/bootstrap.css" rel="stylesheet">
+    
     <script src="bootstrap/jquery.js"></script>
     <script src="bootstrap/bootstrap.js"></script>
 
