--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
 
 <head>
 
-    <meta charset="utf-8">
+<meta charset="utf-8">
 
-   <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
+<meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
 
-    <link rel="stylesheet" type="text/css" href="css/body.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="stylesheet" type="text/css" href="css/body.css">
+
+<link rel="stylesheet" type="text/css" href="css/style.css">
+
+<link rel="stylesheet" type="text/css" href="bootstrap/bootstrap.css">
 
     <title>Seliq - Home Page</title>
 
-    <link href="bootstrap/bootstrap.css" rel="stylesheet">
-    <script src="bootstrap/jquery.js"></script>
-    <script src="bootstrap/bootstrap.js"></script>
+<script src="bootstrap/jquery.js"></script>
+<script src="bootstrap/bootstrap.js"></script>
 
 </head>
 
@@ -22,7 +24,7 @@
     <header class="header">
         <nav class="navbar fixed-top shadow navbar-expand-lg navbar-dark nav-bg-color">
             <a class="navbar-brand ml-lg-4" href="index.html">
-                <img src="logo.png" width="50%" height="50%" alt="logo">
+                <img src="images/logo.png" width="50%" height="50%" alt="logo">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -54,7 +56,7 @@
                         <a class="nav-link" href="login.html">LOGIN</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#account" data-toggle="modal" data-target="#signin" class="nav-link">
+                        <a href="Signup.html" class="nav-link">
                             SIGNUP
                         </a>
                     </li>
@@ -92,7 +94,7 @@
                             <h1>Welcome to Seliq</h1>
 <!--                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus delectus quisquam reiciendis</p>-->
 
-                            <a href="#account" class="get_started" data-toggle="modal" data-target="#signin">
+                            <a href="Signup.html" class="get_started" >
                                 <div>
                                     Create Account
                                 </div>
@@ -109,71 +111,7 @@
         <!--  Sign in  Modal   -->
 
 
-        <div class="fmodal fade" id="signin" tabindex="-1" role="dialog" arai-laballedby="exampleM0dalLabel" aria-hidden="true">
-
-
-            <span class="close_model"> </span>
-            <div class="fmodal-dialog" role="document">
-
-
-
-
-
-
-                <div id="account" class="connection_section">
-
-
-
-                    <div class="signup_form_header">
-                        <div class="signup_form_heading">
-                            <h2>Create your account</h2>
-                        </div>
-                        <div class="signup_form_subheading">
-                            <p>It will just take few minutes</p>
-                        </div>
-                    </div>
-
-
-                    <form class="signup_form_container">
-                        <div class="signup_form_caption">Name</div>
-                        <div class="signup_box_row">
-
-                            <input type="text" name="firstname" placeholder="First Name" class="signup_textbox w50">
-
-                            <input type="text" name="lastname" placeholder="Last Name" class="signup_textbox w50">
-                        </div>
-
-
-                        <div class="signup_form_caption">Email</div>
-                        <div class="signup_box_row">
-                            <input type="email" placeholder="Enter your email" class="signup_textbox w100">
-                        </div>
-
-                        <div class="signup_form_caption">Mobile Number</div>
-                        <div class="signup_box_row">
-                            <input type="number" placeholder="Enter your mobile number" class="signup_textbox w100">
-                        </div>
-
-                        <div class="signup_form_caption">Password</div>
-                        <div class="signup_box_row">
-                            <input type="password" placeholder="Enter Password" class="signup_textbox w50">
-
-                            <input type="password" placeholder="Confirm Password" class="signup_textbox w50">
-                        </div>
-
-
-                        <submit>
-                            <input class="signup_submit_button" type="button" value="Submit">
-
-
-                        </submit>
-                        <p>Already have an account ? <a href="login.html">Login</a></p>
-                    </form>
-                </div>
-            </div>
-
-
-        </div>
+        
 
 
 
@@ -311,7 +249,7 @@
         <div class="wrap_one">
 
             <div class="Fcaption">
-                <a href="about.html">About StuClona</a>
+                <a href="about.html">About Seliq</a>
             </div>
 
             <div class="Fcaption">
@@ -326,16 +264,21 @@
 
         <div class="wrap_two">
 
-            <div class="Fcaption">Contact</div>
+            <div class="Fcaption">Contact
             <ul>
                 <li class=contact_number>+98-1234567890</li>
                 <li class="email">StuClona@gmail.com</li>
             </ul>
+            </div>
 
             <div class="Fcaption">Stay Connected</div>
             <ul>
-                <li><a href="http://www.facebook.com/StuClona">Facebook</a></li>
+                <li>
+                <a href="http://www.facebook.com/StuClona">Facebook</a>
+                </li>
+                <li>
                 <a href="http://www.instagram.com/Stuclona">Instagram</a>
+                </li>
             </ul>
         </div>
 
