--- a/Signup.html
+++ b/Signup.html
@@ -7,12 +7,9 @@
 
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
 
-<link rel="stylesheet" type="text/css" href="css/login.css">
-    
+<link rel="stylesheet" type="text/css" href="css/signup.css">
 <link rel="stylesheet" type="text/css" href="css/body.css">
-
 <link rel="stylesheet" type="text/css" href="css/style.css">
-
 <link rel="stylesheet" type="text/css" href="bootstrap/bootstrap.css">
 
     <title>Seliq - Signup</title>
@@ -58,7 +55,7 @@
                         <a class="nav-link" href="login.html">LOGIN</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#account" data-toggle="modal" data-target="#signin" class="nav-link">
+                        <a href="Signup.html" class="nav-link">
                             SIGNUP
                         </a>
                     </li>
@@ -81,13 +78,13 @@
 
         <!--  Sign in   -->
 
-<div class="connection_section">
+<div class="body_section">
 
-<div class="signup_form_header">
-    <div class="signup_form_heading">
+<div class="signup_header">
+    <div class="signup_heading">
         <h2>Create your account</h2>
     </div>
-    <div class="signup_form_subheading">
+    <div class="signup_subheading">
         <p>It will just take few minutes</p>
     </div>
 </div>
