--- a/index.html
+++ b/index.html
@@ -7,34 +7,20 @@
 
 <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
 
-<<<<<<< HEAD
-<link rel="stylesheet" type="text/css" href="css/body.css">
-
-<link rel="stylesheet" type="text/css" href="css/style.css">
-
-<link rel="stylesheet" type="text/css" href="bootstrap/bootstrap.css">
-
-    <title>Seliq - Home Page</title>
-
-<script src="bootstrap/jquery.js"></script>
-<script src="bootstrap/bootstrap.js"></script>
-=======
     <link rel="stylesheet" type="text/css" href="Bootstrap/bootstrap.css" >
     <link rel="stylesheet" type="text/css" href="css/body.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
     <title>Seliq - Home Page</title>
 
-    
     <script src="bootstrap/jquery.js"></script>
     <script src="bootstrap/bootstrap.js"></script>
->>>>>>> 3b4b6167c6c8ed49f02e3307325c343c03d4d821
 
 </head>
 
 <body>
     <header class="header">
-        <nav class="navbar fixed-top shadow navbar-expand-lg navbar-dark nav-bg-color">
+        <nav class="navbar shadow navbar-expand-lg navbar-dark nav-bg-color">
             <a class="navbar-brand ml-lg-4" href="index.html">
                 <img src="images/logo.png" width="50%" height="50%" alt="logo">
             </a>
@@ -44,10 +30,8 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
-
                 <form>
                     <div class="search">
-
                         <div class="first_wrap">
                             <input class="SB" type="search" placeholder="Search" aria-label="Search">
                         </div>
@@ -59,7 +43,6 @@
                       </div>
                   </div>
 -->
-
                     </div>
                 </form>
 
@@ -68,7 +51,7 @@
                         <a class="nav-link" href="login.html">LOGIN</a>
                     </li>
                     <li class="nav-item">
-                        <a href="Signup.html" class="nav-link">
+                        <a href="signup.html" class="nav-link">
                             SIGNUP
                         </a>
                     </li>
@@ -90,34 +73,34 @@
 
     <main>
 
-        <div class="bulletin">
+        <!-- <div class="bulletin">
             <span class="Blogo"></span>
             <div class="news"> News bulletin here </div>
             <span class="cross_logo"></span>
-        </div>
+        </div> -->
 
         <!--Cover section-->
 
-        <section>
-            <div class="cover_section">
-                <div class="cover_img">
-                    <div class="overlay">
-                        <div class="card_container">
-                            <h1>Welcome to Seliq</h1>
+<section>
+    <div class="cover_section">
+        <!-- <div class="cover_img"> -->
+            <!-- <div class="overlay"> -->
+                <!-- <div class="card_container"> -->
+                <h1>Welcome to Seliq</h1>
 <!--                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus delectus quisquam reiciendis</p>-->
 
-                            <a href="Signup.html" class="get_started" >
-                                <div>
-                                    Create Account
-                                </div>
-                            </a>
-
-
-                        </div>
-                    </div>
+                <a href="Signup.html">
+                <div class="get_started">
+                    Create Account
                 </div>
-            </div>
-        </section>
+                </a>
+
+
+                </div>
+            <!-- </div> -->
+        <!-- </div> -->
+    <!-- </div> -->
+</section>
 
 
         <!--  Sign in  Modal   -->
