--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
 
-    <link rel="stylesheet" type="text/css" href="Bootstrap/bootstrap.css" >
+    <link rel="stylesheet" type="text/css" href="bootstrap/bootstrap.css" >
     <link rel="stylesheet" type="text/css" href="css/body.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
