--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
 
-<meta charset="utf-8">
+    <meta charset="utf-8">
 
-<meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
 
-    <link rel="stylesheet" type="text/css" href="bootstrap/bootstrap.css" >
+    <link rel="stylesheet" type="text/css" href="bootstrap/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/body.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
@@ -15,16 +15,16 @@
 
     <script src="bootstrap/jquery.js"></script>
     <script src="bootstrap/bootstrap.js"></script>
-    
-<!--    Fonts-->
 
-<link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
+    <!--    Fonts-->
+
+    <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
-<header class="header">
+    <header class="header">
         <nav class="navbar shadow navbar-expand-lg navbar-dark nav-bg-color">
             <a class="navbar-brand ml-lg-4" href="index.html">
                 <img src="images/logo.png" width="50%" height="50%" alt="logo">
@@ -40,7 +40,7 @@
                         <div class="first_wrap">
                             <input class="SB" type="search" placeholder="Search" aria-label="Search">
                         </div>
-<!--
+                        <!--
                   <div class="second_wrap">
                       <div class="icon">
                       </div>
@@ -85,33 +85,29 @@
         </div> -->
 
         <!--Cover section-->
+<section class="cover_section">
 
-<section>
-    <div class="cover_section">
-        <!-- <div class="cover_img"> -->
+            <!-- <div class="cover_img"> -->
             <!-- <div class="overlay"> -->
-                <!-- <div class="card_container"> -->
-                <h1>Welcome to Seliq</h1>
-<!--                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus delectus quisquam reiciendis</p>-->
+            <!-- <div class="card_container"> -->
+            <h1>Welcome to Seliq</h1>
+            <!--                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus delectus quisquam reiciendis</p>-->
 
-                <a href="Signup.html">
+            <a href="Signup.html">
                 <div class="get_started">
                     Create Account
                 </div>
-                </a>
-
-
-                </div>
+            </a>
             <!-- </div> -->
-        <!-- </div> -->
-    <!-- </div> -->
+            <!-- </div> -->
+            <!-- </div> -->
 </section>
 
-<!--          Search Tab                  -->
+        <!--          Search Tab                  -->
         <section class="tab_section">
-                <form class="tab">
-     
-<!--
+            <form class="tab">
+
+                <!--
         <select name="category" class="input categorybox">
 
         <option value="electronics">Electronics</option>
@@ -131,9 +127,9 @@
         </select>
 -->
 
-           <input type="text" name="search" class="input searchbox" placeholder="search any product">
+                <input type="text" name="search" class="input searchbox" placeholder="search any product">
 
-              </form>
+            </form>
         </section>
         <!--Carousal-->
 
@@ -142,7 +138,7 @@
         <section class="categories">
 
 
-<!--
+            <!--
             <div class="circles">
                 <div class="circle1"></div>
                 <div class="circle2"></div>
@@ -151,84 +147,84 @@
             </div>
 -->
 
-<div class="background">
-    <div>
-        <h2>looking for ?</h2>
-    </div>
-
-    <div class="CT_container">
-
-        <div class="thumbs">
-
-            <div class="image_container">
-                <img class="icon" src="Icons/kettle.svg" alt="electronics" />
-            </div>
-            <div class="title_container">
-                <div class="info_button">
-                    Electronics
+            <div class="background">
+                <div>
+                    <h2>looking for ?</h2>
                 </div>
-            </div>
 
-        </div>
+                <div class="CT_container">
 
-        <div class="thumbs">
-            <div class="image_container">
-                <img class="icon" src="Icons/gadgets.svg" alt="gadgets" />
-            </div>
-            <div class="title_container">
-                <div class="info_button">
-                    Gadgets
+                    <div class="thumbs">
+
+                        <div class="image_container">
+                            <img class="icon" src="Icons/kettle.svg" alt="electronics" />
+                        </div>
+                        <div class="title_container">
+                            <div class="info_button">
+                                Electronics
+                            </div>
+                        </div>
+
+                    </div>
+
+                    <div class="thumbs">
+                        <div class="image_container">
+                            <img class="icon" src="Icons/gadgets.svg" alt="gadgets" />
+                        </div>
+                        <div class="title_container">
+                            <div class="info_button">
+                                Gadgets
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="thumbs">
+                        <div class="image_container">
+                            <img class="icon" src="Icons/households.svg" alt="households" />
+                        </div>
+                        <div class="title_container">
+                            <div class="info_button">
+                                Households
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="thumbs">
+                        <div class="image_container">
+                            <img class="icon" src="Icons/mobile.svg" alt="mobiles" />
+                        </div>
+                        <div class="title_container">
+                            <div class="info_button">
+                                Mobiles
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="thumbs">
+                        <div class="image_container">
+                            <img class="icon" src="Icons/bike.svg" alt="vehicles" />
+                        </div>
+                        <div class="title_container">
+                            <div class="info_button">
+                                Vehicles
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="thumbs">
+                        <div class="image_container">
+                            <img class="icon" src="Icons/other.svg" alt="others" />
+                        </div>
+                        <div class="title_container">
+                            <div class="info_button">
+                                Other
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
-            </div>
-        </div>
 
-        <div class="thumbs">
-            <div class="image_container">
-                <img class="icon" src="Icons/households.svg" alt="households" />
             </div>
-            <div class="title_container">
-                <div class="info_button">
-                    Households
-                </div>
-            </div>
-        </div>
-
-        <div class="thumbs">
-            <div class="image_container">
-                <img class="icon" src="Icons/mobile.svg" alt="mobiles" />
-            </div>
-            <div class="title_container">
-                <div class="info_button">
-                    Mobiles
-                </div>
-            </div>
-        </div>
-
-        <div class="thumbs">
-            <div class="image_container">
-                <img class="icon" src="Icons/bike.svg" alt="vehicles" />
-            </div>
-            <div class="title_container">
-                <div class="info_button">
-                    Vehicles
-                </div>
-            </div>
-        </div>
-
-        <div class="thumbs">
-            <div class="image_container">
-                <img class="icon" src="Icons/other.svg" alt="others" />
-            </div>
-            <div class="title_container">
-                <div class="info_button">
-                    Other
-                </div>
-            </div>
-        </div>
-
-    </div>
-
-</div>
 
         </section>
         <!--team-->
@@ -257,19 +253,19 @@
         <div class="wrap_two">
 
             <div class="Fcaption">Contact
-            <ul>
-                <li class=contact_number>+98-1234567890</li>
-                <li class="email">StuClona@gmail.com</li>
-            </ul>
+                <ul>
+                    <li class=contact_number>+98-1234567890</li>
+                    <li class="email">StuClona@gmail.com</li>
+                </ul>
             </div>
 
             <div class="Fcaption">Stay Connected</div>
             <ul>
                 <li>
-                <a href="http://www.facebook.com/StuClona">Facebook</a>
+                    <a href="http://www.facebook.com/StuClona">Facebook</a>
                 </li>
                 <li>
-                <a href="http://www.instagram.com/Stuclona">Instagram</a>
+                    <a href="http://www.instagram.com/Stuclona">Instagram</a>
                 </li>
             </ul>
         </div>
