--- a/signup.html
+++ b/signup.html
@@ -16,6 +16,9 @@
     <script src="bootstrap/jquery.js"></script>
     <script src="bootstrap/bootstrap.js"></script>
 
+<link href="https://fonts.googleapis.com/css?family=Staatliches&display=swap" rel="stylesheet">
+
+
 </head>
 
 <body>
