--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 <div class="gradient">
    <div class="w90">
     <div class="c_row c_header">
-    <h1>Welcome User</h1>
+    <h1>Welcome user</h1>
     <p>Create an account to sell<br/> your stuffs here</p>
     </div>
     <div class="c_row c_subheader">
