--- a/index.html
+++ b/index.html
@@ -17,20 +17,7 @@
     <script src="bootstrap/bootstrap.js"></script>
 
     <!--    Fonts-->
-    
-    <link href="https://fonts.googleapis.com/css2?
-    family=Poppins
-    &family=Bebas+Neue
-    &family=Carter+One
-    &family=Staatliches
-    &family=Josefin+Sans
-    &family=Lato:wght@400;700;900
-    &family=Lobster
-    &family=Montserrat
-    &family=Open+Sans:wght@400;700;800
-    &family=Oswald:wght@300;400
-    &family=Righteous
-    &display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Bebas+Neue&family=Carter+One&family=Staatliches&family=Josefin+Sans&family=Lato:wght@400;700;900&family=Lobster&family=Montserrat&family=Open+Sans:wght@400;700;800&family=Oswald:wght@300;400&family=Righteous&display=swap" rel="stylesheet">
 
 </head>
 
