--- a/signup.html
+++ b/signup.html
@@ -16,7 +16,8 @@
     <script src="bootstrap/jquery.js"></script>
     <script src="bootstrap/bootstrap.js"></script>
 
-<link href="https://fonts.googleapis.com/css?family=Staatliches&display=swap" rel="stylesheet">
+<!--    Fonts-->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Bebas+Neue&family=Carter+One&family=Staatliches&family=Josefin+Sans&family=Lato:wght@400;700;900&family=Lobster&family=Montserrat&family=Open+Sans:wght@400;700;800&family=Oswald:wght@300;400&family=Righteous&display=swap" rel="stylesheet">
 
 
 </head>
