--- a/index.html
+++ b/index.html
@@ -87,21 +87,32 @@
 
 <div class="cover_image">
 <div class="gradient">
-   <div class="w90">
-    <div class="c_row c_header">
-    <h1>Welcome user</h1>
-    <p>Create an account to sell<br/> your stuffs here</p>
+   <div class="c_container">
+    <div class="c_row">
+        <div class="c_header">
+            <h1>Welcome user</h1>
+            <p>Create an account to sell<br /> your stuffs here</p>
+        </div>
     </div>
-    <div class="c_row c_subheader">
-        <button class="c_button">
+    <div class="c_row">
+       <div class="c_subheader">
+        <button class=" c_button signin_button">
         <a href="signup.html">
         Create account
         </a>
         </button>
+        <button class=" c_button login_button">
+        <a href="login.html">
+        Login
+        </a>
+        </button>
         
+    </div>
+    </div>
+    <div class="c_row last">
         <p><a href="password_reset.html">Forgot password?</a></p>
     </div>
-    </div>
+</div>
 </div>
 </div>
 </section>
@@ -156,7 +167,7 @@
 
         <div class="thumbs">
             <div class="image_container">
-                   <img class="icon" src="icons/kettle.svg" alt="electronics" />
+                   <img class="c_icon" src="icons/kettle.svg" alt="electronics" />
             </div>
             <div class="t_button">
                     Electronics
@@ -165,7 +176,7 @@
 
         <div class="thumbs">
             <div class="image_container">
-                   <img class="icon" src="icons/gadgets.svg" alt="gadgets" />
+                   <img class="c_icon" src="icons/gadgets.svg" alt="gadgets" />
             </div>
             <div class="t_button">
                                 Gadgets
@@ -175,7 +186,7 @@
 
         <div class="thumbs">
             <div class="image_container">
-                 <img class="icon" src="icons/households.svg" alt="households" />
+                 <img class="c_icon" src="icons/households.svg" alt="households" />
             </div>
             <div class="t_button">
                                 Households
@@ -184,7 +195,7 @@
 
         <div class="thumbs">
             <div class="image_container">
-                <img class="icon" src="icons/mobile.svg" alt="mobiles" />
+                <img class="c_icon" src="icons/mobile.svg" alt="mobiles" />
             </div>
             <div class="t_button">
                 Mobiles
@@ -193,7 +204,7 @@
 
         <div class="thumbs">
             <div class="image_container">
-                <img class="icon" src="icons/bike.svg" alt="vehicles" />
+                <img class="c_icon" src="icons/bike.svg" alt="vehicles" />
             </div>
             <div class="t_button">
                                 Vehicles
@@ -202,7 +213,7 @@
 
         <div class="thumbs">
             <div class="image_container">
-                <img class="icon" src="icons/other.svg" alt="others" />
+                <img class="c_icon" src="icons/other.svg" alt="others" />
             </div>
             <div class="t_button">
                 Other
