--- a/index.html
+++ b/index.html
@@ -96,16 +96,19 @@
     </div>
     <div class="c_row">
        <div class="c_subheader">
-        <button class=" c_button signin_button">
-        <a href="signup.html">
-        Create account
-        </a>
+
+        <a href="signup.html"> 
+
+        <button class="c_button signin_button">
+        <p>Create account</p>
         </button>
-        <button class=" c_button login_button">
+        </a>
+        
         <a href="login.html">
-        Login
-        </a>
+        <button class="c_button login_button">
+        <p>Login</p>
         </button>
+        </a>
         
     </div>
     </div>
