--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <div class="c_row">
         <div class="c_header">
             <h1>Welcome user</h1>
-            <p>Create an account to sell<br /> your stuffs here</p>
+            <p>Create an account to sell your stuffs here</p>
         </div>
     </div>
     <div class="c_row">
@@ -166,64 +166,108 @@
            <p>Looking for?</p>
     </div>
 
-      <div class="ct_container">
+<div class="ct_container">
 
-        <div class="thumbs">
-            <div class="image_container">
-                   <img class="c_icon" src="icons/kettle.svg" alt="electronics" />
-            </div>
-            <div class="t_button">
-                    Electronics
-            </div>
+    <div class="thumbs">
+        <div class="image_container">
+            <img class="thumb_background" src="images/households.jpg" alt="Households" />
+            <div class="overlay"></div>
         </div>
 
-        <div class="thumbs">
-            <div class="image_container">
-                   <img class="c_icon" src="icons/gadgets.svg" alt="gadgets" />
-            </div>
-            <div class="t_button">
-                                Gadgets
-             </div>
-                        
+        <div class="t_button">
+            Households
+        </div>
+    </div>
+
+    <div class="thumbs">
+        <div class="image_container">
+            <img class="thumb_background" src="images/fashion.jpg" alt="Fashion" />
+            <div class="overlay"></div>
         </div>
 
-        <div class="thumbs">
-            <div class="image_container">
-                 <img class="c_icon" src="icons/households.svg" alt="households" />
-            </div>
-            <div class="t_button">
-                                Households
-            </div>
+        <div class="t_button">
+            Fashion
+        </div>
+    </div>
+
+    <div class="thumbs">
+        <div class="image_container">
+            <img class="thumb_background" src="images/books.jpg" alt="Books" />
+            <div class="overlay"></div>
         </div>
 
-        <div class="thumbs">
-            <div class="image_container">
-                <img class="c_icon" src="icons/mobile.svg" alt="mobiles" />
-            </div>
-            <div class="t_button">
-                Mobiles
-            </div>
+        <div class="t_button">
+            Books
+        </div>
+    </div>
+
+    <div class="thumbs">
+        <div class="image_container">
+            <img class="thumb_background" src="images/electronics.jpg" alt="Electronics" />
+            <div class="overlay"></div>
         </div>
 
-        <div class="thumbs">
-            <div class="image_container">
-                <img class="c_icon" src="icons/bike.svg" alt="vehicles" />
-            </div>
-            <div class="t_button">
-                                Vehicles
-                            </div>
+        <div class="t_button">
+            Electronics
+        </div>
+    </div>
+
+    <div class="thumbs">
+        <div class="image_container">
+            <img class="thumb_background" src="images/cosmetics.jpg" alt="Cosmetics" />
+            <div class="overlay"></div>
         </div>
 
-        <div class="thumbs">
-            <div class="image_container">
-                <img class="c_icon" src="icons/other.svg" alt="others" />
-            </div>
-            <div class="t_button">
-                Other
-            </div>
+        <div class="t_button">
+            Cosmetics
+        </div>
+    </div>
+
+    <div class="thumbs">
+        <div class="image_container">
+            <img class="thumb_background" src="images/gadgets.jpg" alt="Gadgets" />
+            <div class="overlay"></div>
         </div>
 
-      </div>
+        <div class="t_button">
+            Gadgets
+        </div>
+    </div>
+
+    <div class="thumbs">
+        <div class="image_container">
+            <img class="thumb_background" src="images/mobiles.jpg" alt="Mobiles" />
+            <div class="overlay"></div>
+        </div>
+
+        <div class="t_button">
+            Mobiles
+        </div>
+    </div>
+
+    <div class="thumbs">
+        <div class="image_container">
+            <img class="thumb_background" src="images/vehicles.jpg" alt="Vehicles" />
+            <div class="overlay"></div>
+        </div>
+
+        <div class="t_button">
+            Vehicles
+        </div>
+    </div>
+
+    <div class="thumbs">
+        <div class="image_container">
+            <img class="thumb_background" src="images/other.jpg" alt="Other" />
+            <div class="overlay"></div>
+        </div>
+
+        <div class="t_button">
+            Other
+        </div>
+    </div>
+
+</div>
 
 </section>
         
