--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
 
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
-
+ 
     <link rel="stylesheet" type="text/css" href="css/global.css">
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <link rel="stylesheet" type="text/css" href="bootstrap/bootstrap.css">
@@ -163,7 +163,7 @@
 <section class="categories_section">
 
     <div class="ct_header">
-           <p>Looking for?</p>
+           <p>What are you looking for ?</p>
     </div>
 
 <div class="ct_container">
