--- a/login.html
+++ b/login.html
@@ -79,7 +79,7 @@
 
             <div class="fheader">
                 <div class="heading">
-                   <h2>Login to <a href="hbd.html">your</a>  account</h2>
+                   <h2>Login to your account</h2>
                 </div>
             </div>
 
