--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     </div>
     </div>
     <div class="c_row last">
-        <p><a href="password_reset.html">Forgot password?</a></p>
+        <p><a href="email_page.html">Forgot password?</a></p>
     </div>
 </div>
 </div>
