--- a/signup.html
+++ b/signup.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-
+ 
     <meta charset="utf-8">
 
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
@@ -78,8 +78,8 @@
 <!--  Sign in   -->
 <main>
 <div class="body_section">
-<div class="fcontainer_outer">
 <div class="fcontainer">
+<!--<div class="fcontainer">-->
 <div class="fheader">
     <div class="heading">
         <h2>Create your account</h2>
@@ -94,8 +94,8 @@
 
     <div class="row">
         <div class="caption">Name</div>
-        <input type="text" name="firstname" placeholder="First Name" class="textbox w50">
-        <input type="text" name="lastname" placeholder="Last Name" class="textbox w50">
+        <input type="text" name="firstname" placeholder="First name" class="textbox w50">
+        <input type="text" name="lastname" placeholder="Last name" class="textbox w50">
     </div>
 
     <div class="row">
@@ -112,8 +112,8 @@
 
     <div class="row">
         <div class="caption">Password</div>
-        <input type="password" placeholder="Enter Password" class="textbox w50">
-        <input type="password" placeholder="Confirm Password" class="textbox w50">
+        <input type="password" placeholder="Enter password" class="textbox w50">
+        <input type="password" placeholder="Confirm password" class="textbox w50">
     </div>
     
     <submit>
@@ -121,7 +121,7 @@
     </submit>
 </form>
  
-</div>
+<!--</div>-->
 </div>
 
 </div>
