--- a/signup.html
+++ b/signup.html
@@ -79,8 +79,10 @@
 <main>
 <div class="body_section">
 <div class="fcontainer">
-<!--<div class="fcontainer">-->
-<div class="fheader">
+    <div class="gradient2"></div>
+    <div class="gradient1"></div>
+    <div class="content">
+        <div class="fheader">
     <div class="heading">
         <h2>Create your account</h2>
     </div>
@@ -90,7 +92,7 @@
         </p>
     </div>
 </div>
-<form class="inner_container">
+        <form class="inner_container">
 
     <div class="row">
         <div class="caption">Name</div>
@@ -120,8 +122,7 @@
         <input class="button" type="button" value="Submit">
     </submit>
 </form>
- 
-<!--</div>-->
+    </div>
 </div>
 
 </div>
