--- a/login.html
+++ b/login.html
@@ -63,7 +63,7 @@
                             Profile
                         </a>
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">My Account</a>
+                            <a class="dropdown-item" href="profile.html">My Account</a>
                             <a class="dropdown-item" href="#">Log Out</a>
                         </div>
                     </li>
