--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
     </div>
     </div>
     <div class="c_row last">
+        <span class="s_icon_container forgot_icon"> <img class="s_icon"src="icons/forgotW.png"> </span>
         <p><a href="email_page.html">Forgot password?</a></p>
     </div>
 </div>
@@ -268,7 +269,6 @@
 
 </section>
         
-        <!--team-->
         
 <section></section>
 
