--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </div>
     </div>
     <div class="c_row">
-       <div class="c_subheader">
+       <div class="buttons_container">
 
         <a href="signup.html"> 
 
