--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="css/global.css">
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <link rel="stylesheet" type="text/css" href="bootstrap/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="css/loader.css">
      
   		<title>Seliq - Home Page</title>
 
@@ -22,6 +23,14 @@
 </head>
 
 <body>
+    <script type="text/javascript" src="js/loader.js"></script>
+    <div class="loader">
+            <div class="bar bar1 m5"></div>
+            <div class="bar bar2 m5"></div>
+            <div class="bar bar3 m5"></div>
+            <div class="bar bar2 m5"></div>
+            <div class="bar bar1 m5"></div>
+    </div>
     
 <header class="header">
         <nav class="navbar shadow navbar-expand-lg navbar-dark nav-bg-color">
